change color of form font to be visible

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -57,6 +57,7 @@ text-size: 70px;
 
 #ListOfHeroes{
     float: left;
+    color:black;
 }
 #navbar{
     color:white;
@@ -67,4 +68,7 @@ text-align: center;
 }
 .success{
 font-size: 30px;
+}
+#members{
+color:black;
 }
