--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -3,7 +3,7 @@
 
 
 
-    <div class="container">
+    <div class="container" id="squadform">
         <h2 class="text-center"><strong>Create a Squad</strong></h2>
 
         <form action="/success">
@@ -25,7 +25,7 @@
                 <h3>Select Members Of Your Squad. You can have a maximum of 5 on your Squad</h3>
 
                 <label for="member1">Select your Team Lead:</label>
-                <select name="member1" id="cars" form="carform">
+                <select name="member1" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -40,7 +40,7 @@
                 </select>
 
                 <label for="member2">Select Member 2:</label>
-                <select name="member2" id="cars" form="carform">
+                <select name="member2" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -54,7 +54,7 @@
                     <option value="Mbaku">Killmonger</option>
                 </select>
                 <label for="member3">Select Member 3 :</label>
-                <select name="member3" id="cars" form="carform">
+                <select name="member3" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -68,7 +68,7 @@
                     <option value="Mbaku">Killmonger</option>
                 </select>
                 <label for="member4">Select Member 4:</label>
-                <select name="member4" id="cars" form="carform">
+                <select name="member4" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -82,7 +82,7 @@
                     <option value="Mbaku">Killmonger</option>
                 </select>
                 <label for="member5">Select Member 5:</label>
-                <select name="member5" id="cars" form="carform">
+                <select name="member5" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -96,7 +96,7 @@
                     <option value="Mbaku">Killmonger</option>
                 </select>
                 <label for="member2">Select Member 6:</label>
-                <select name="member2" id="cars" form="carform">
+                <select name="member2" id="members" form="carform">
                     <option value="Okoye">Okoye</option>
                     <option value="Nakia">Nakia</option>
                     <option value="Killmonger">Killmonger</option>
@@ -110,7 +110,7 @@
                     <option value="Mbaku">Killmonger</option>
                 </select>
 
-
+            </div>
 
 
 
