added pom.xml file

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{#block "title"}}Heroica!{{/block}}</title>
+    <title>{{#block "title"}}Heroika!{{/block}}</title>
     <link rel = "icon" href =
             "/images/icon"
           type = "image/x-icon">
