--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -3,7 +3,7 @@
 
 
 
-    <div class="container" id="squadform">
+    <div class="container">
         <h2 class="text-center"><strong>Create a Squad</strong></h2>
 
         <form action="/success">
@@ -21,101 +21,50 @@
                 <label class="active" for="squadCause">Squad Cause</label>
                 <input id="squadCause" name="squadCause" type="text" class="form-control">
             </div>
-            <div class="container" id="listOfHeroes">
-                <h3>Select Members Of Your Squad. You can have a maximum of 5 on your Squad</h3>
+            <div class="container" #listofheroes>
+                <h3><strong>Select Members Of Your Squad. The first hero you select will be your team lead.</strong></h3>
+                <p><a href='/profiles' >Click here to review the Heroes' Profile.</a></p>
+                <div class= "row">
+                    <div class="col-md-4">
+                        <input type="checkbox" id="1" name="members" values="Okoye">
+                        <label for="member1"> Okoye</label><br>
+                        <input type="checkbox" id="2" name="members" value="Lupita">
+                        <label for="member2"> Lupita</label><br>
+                        <input type="checkbox" id="3" name="members" value="T'Challa">
+                        <label for="member3"> T'Chaka</label><br>
 
-                <label for="member1">Select your Team Lead:</label>
-                <select name="member1" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
 
-                <label for="member2">Select Member 2:</label>
-                <select name="member2" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
-                <label for="member3">Select Member 3 :</label>
-                <select name="member3" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
-                <label for="member4">Select Member 4:</label>
-                <select name="member4" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
-                <label for="member5">Select Member 5:</label>
-                <select name="member5" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
-                <label for="member2">Select Member 6:</label>
-                <select name="member2" id="members" form="carform">
-                    <option value="Okoye">Okoye</option>
-                    <option value="Nakia">Nakia</option>
-                    <option value="Killmonger">Killmonger</option>
-                    <option value="Storm">Storm</option>
-                    <option value="T'Challa">T'Challa</option>
-                    <option value="Nairobi">Nairobi</option>
-                    <option value="Minion">Minion</option>
-                    <option value="Dread">Dread</option>
-                    <option value="The Couple">The Couple</option>
-                    <option value="Shuri">Shuri</option>
-                    <option value="Mbaku">Killmonger</option>
-                </select>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" id="1" name="members" value="Killmonger">
+                        <label for="member4"> Killmonger</label><br>
+                        <input type="checkbox" id="2" name="members" value="Minion">
+                        <label for="member5"> Minion</label><br>
+                        <input type="checkbox" id="3" name="members" value="Nairobi">
+                        <label for="member6"> Nairobi</label><br>
+                        <input type="checkbox" id="1" name="members" value="Storm">
+                        <label for="member7"> Storm</label><br>
 
-            </div>
+
+
+                    </div>
+                    <div class="col-md-4">
+                        <input type="checkbox" id="2" name="members" value="Shuri">
+                        <label for="member8"> Shuri</label><br>
+                        <input type="checkbox" id="3" name="members" value="The Couple">
+                        <label for="member9"> The Couple</label><br>
+                        <input type="checkbox" id="3" name="members" value="Mbaku">
+                        <label for="member10"> Mbaku</label><br>
+                    </div>
+                </div>
+
 
 
 
 
-            <button type="submit" class=" btn btn-success" >Create Squad!</button>
+            </div>
+
+            <button type="submit" class=" btn btn-success" >Create models.Squad!</button>
         </form>
     </div>
     <!--
