--- a/src/main/resources/templates/Success.hbs
+++ b/src/main/resources/templates/Success.hbs
@@ -5,12 +5,10 @@
     Your {{ squadName }} Squad  has been created and saved.
 
     Your mission is to {{squadCause}} as a team.
-    <String[] items = request.getParameterValues("members");
-    for(int i = 0; i < items.length; i++){
-    out.println("Your team members are" + items[i] + "," "<BR>");
-    }
-    %>
-    Your team members are
+
+    Your team leader will be {{members}}.
+
+
 
 
 
