added route to display saved instances of squad on squad-store template

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -17,7 +17,7 @@
 
     <li role="presentation" id="navbar" class="active"><a href="/">HOME</a></li>
     <li role="presentation" id="navbar"><a href="/profiles">HEROES' PROFILES</a></li>
-    <li role="presentation" id="navbar"><a href="/squads/new">SQUADS</a></li>
+    <li role="presentation" id="navbar"><a href="/squad-store">SQUADS</a></li>
     <li role="presentation" id="navbar"><a href="/squad-form">CREATE A NEW SQUAD</a></li>
 </ul>
 <h1 id="logo"><strong>WELCOME TO HEROIKA!!!</strong></h1>
