--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -64,7 +64,7 @@
 
             </div>
 
-            <button type="submit" class=" btn btn-success" >Create models.Squad!</button>
+            <button type="submit" class=" btn btn-success" >Create Squad!</button>
         </form>
     </div>
     <!--
