integrate heroes into squads

--- a/src/main/resources/templates/Success.hbs
+++ b/src/main/resources/templates/Success.hbs
@@ -6,6 +6,8 @@
 
     Your mission is to {{newSquad.squadCause}} as a team.
 
+    Your team leader will be {{newSquad.members}}
+
    <!-- Your team leader will be members interpolation.-->
 
 
