refactor code for squad leader to appear

--- a/src/main/resources/templates/Success.hbs
+++ b/src/main/resources/templates/Success.hbs
@@ -6,7 +6,15 @@
 
     Your mission is to {{newSquad.squadCause}} as a team.
 
-    Your team leader will be {{newSquad.members}}
+    Your team leader will be {{members}}
+
+     {{hero1}}
+
+     {{hero2}}
+
+    {{hero3}}
+     {{hero4}}
+
 
    <!-- Your team leader will be members interpolation.-->
 
