--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -22,40 +22,56 @@
                 <input id="squadCause" name="squadCause" type="text" class="form-control">
             </div>
             <div class="container" #listofheroes>
-                <h3><strong>Select Members Of Your Squad. The first hero you select will be your team lead.</strong></h3>
-                <p><a href='/profiles' >Click here to review the Heroes' Profile.</a></p>
+                <h3><strong>Select The Team Leader( Only Select one).</strong></h3>
+                <p><a href='/profiles' >Click here to review the Heroes' Profile Before Selection.</a></p>
                 <div class= "row">
                     <div class="col-md-4">
-                        <input type="checkbox" id="1" name="members" values="Okoye">
+                        <input type="radio" id="1" name="members" values="Okoye">
                         <label for="member1"> Okoye</label><br>
-                        <input type="checkbox" id="2" name="members" value="Lupita">
+                        <input type="radio" id="2" name="members" value="Lupita">
                         <label for="member2"> Lupita</label><br>
-                        <input type="checkbox" id="3" name="members" value="T'Challa">
+                        <input type="radio" id="3" name="members" value="T'Challa">
                         <label for="member3"> T'Chaka</label><br>
 
 
                     </div>
                     <div class="col-md-4">
-                        <input type="checkbox" id="1" name="members" value="Killmonger">
+                        <input type="radio" id="1" name="members" value="Killmonger">
                         <label for="member4"> Killmonger</label><br>
-                        <input type="checkbox" id="2" name="members" value="Minion">
+                        <input type="radio" id="2" name="members" value="Minion">
                         <label for="member5"> Minion</label><br>
-                        <input type="checkbox" id="3" name="members" value="Nairobi">
+                        <input type="radio" id="3" name="members" value="Nairobi">
                         <label for="member6"> Nairobi</label><br>
-                        <input type="checkbox" id="1" name="members" value="Storm">
+                        <input type="radio" id="1" name="members" value="Storm">
                         <label for="member7"> Storm</label><br>
 
 
 
                     </div>
                     <div class="col-md-4">
-                        <input type="checkbox" id="2" name="members" value="Shuri">
+                        <input type="radio" id="2" name="members" value="Shuri">
                         <label for="member8"> Shuri</label><br>
-                        <input type="checkbox" id="3" name="members" value="The Couple">
+                        <input type="radio" id="3" name="members" value="The Couple">
                         <label for="member9"> The Couple</label><br>
-                        <input type="checkbox" id="3" name="members" value="Mbaku">
+                        <input type="radio" id="3" name="members" value="Mbaku">
                         <label for="member10"> Mbaku</label><br>
                     </div>
+                </div>
+                <div class="form-group">
+                    <label class="active" for="hero1">Squad Member 2</label>
+                    <input id="hero1" name="hero1" type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="active" for="hero2">Squad Member 3</label>
+                    <input id="hero2" name="hero2" type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="active" for="hero3">Squad Member 4</label>
+                    <input id="hero3" name="hero3" type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label class="active" for="hero4">Squad Member 5</label>
+                    <input id="hero4" name="hero4" type="text" class="form-control">
                 </div>
 
 
