add CRUD routes

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -33,11 +33,11 @@
 </div>
 <!--end main template-->
 {{#block "footer"}}
-    <!--<footer class="footer">
+    <footer class="footer">
         <div class="container">
-            <p class="text-muted"><a href="/squads/delete">DELETE ALL SQUADS</a></p>
+            <p class="text-muted"><a href="/squads/delete">DELETE ALL Squads</a></p>
         </div>
     </footer>
     </body>
-    </html>-->
+    </html>
 {{/block}}
