removed postgres dao folders to remove errors

--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -80,7 +80,7 @@
 
             </div>
 
-            <button type="submit" class=" btn btn-success" >Create Squad!</button>
+            <button type="submit" class=" btn btn-success" >Create models.Squad!</button>
         </form>
     </div>
     <!--
