removed some dependencies to allow deployment

--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -57,7 +57,7 @@
                         <label for="member10"> Mbaku</label><br>
                     </div>
                 </div>
-                <div class="form-group">
+              <!--  <div class="form-group">
                     <label class="active" for="hero1">Squad Member 2</label>
                     <input id="hero1" name="hero1" type="text" class="form-control">
                 </div>
@@ -72,7 +72,7 @@
                 <div class="form-group">
                     <label class="active" for="hero4">Squad Member 5</label>
                     <input id="hero4" name="hero4" type="text" class="form-control">
-                </div>
+                </div>-->
 
 
 
