--- a/src/main/resources/templates/Homepage.hbs
+++ b/src/main/resources/templates/Homepage.hbs
@@ -2,6 +2,7 @@
 {{#partial "content"}}
     <div class="Container" id="homepage">
         <div class="page-header">
+            <h1 id="logo"><strong>WELCOME TO HEROIKA!!!</strong></h1>
             <br>
             <br>
 
