--- a/src/main/resources/templates/Squad-Form.hbs
+++ b/src/main/resources/templates/Squad-Form.hbs
@@ -31,7 +31,7 @@
                         <input type="radio" id="2" name="members" value="Lupita">
                         <label for="member2"> Lupita</label><br>
                         <input type="radio" id="3" name="members" value="T'Challa">
-                        <label for="member3"> T'Chaka</label><br>
+                        <label for="member3"> T'Challa</label><br>
 
 
                     </div>
