--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -4,7 +4,7 @@
 
 
     <div class="container">
-        <h2 class="text-center"><strong>Create a Squad</strong></h2>
+        <h2 class="text-center"><strong>Create Hero</strong></h2>
 
         <form action="/heroes/new" method="post">
             <div class="form-group">
