--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -18,9 +18,11 @@
     <li role="presentation" id="navbar" class="active"><a href="/">HOME</a></li>
     <li role="presentation" id="navbar"><a href="/profiles">HEROES' PROFILES</a></li>
     <li role="presentation" id="navbar"><a href="/squad-store">SQUADS</a></li>
-    <li role="presentation" id="navbar"><a href="/squad-form">CREATE A NEW SQUAD</a></li>
+    <li role="presentation" id="navbar"><a href="/hero-store">HEROES</a></li>
+    <li role="presentation" id="navbar"><a href="/squad-form">CREATE A SQUAD</a></li>
+    <li role="presentation" id="navbar"><a href="/hero-form"> CREATE A HERO</a></li>
 </ul>
-<h1 id="logo"><strong>WELCOME TO HEROIKA!!!</strong></h1>
+
 <div class="container">
     <!--begin main template-->
 
@@ -35,7 +37,7 @@
 {{#block "footer"}}
     <footer class="footer">
         <div class="container">
-            <p class="text-muted"><a href="/squads/delete"> &nbsp; &nbsp; DELETE ALL SQUADS</a></p>
+            <p class="text-muted"><a href="/squads/delete"> &nbsp; &nbsp; </a></p>
         </div>
     </footer>
     </body>
