--- a/src/main/resources/templates/squad-store.hbs
+++ b/src/main/resources/templates/squad-store.hbs
@@ -14,8 +14,9 @@
             {{hero3}}
             {{hero4}}
             <br>
-
+            <a href="/heroes/{{id}}" width="5px" height="5px">Update Squad</a><br>
             <a href="/squad-store/{{id}}" width="5px" height="5px">Delete Squad</a>
+
             <br>
             <br>
             <br>
