--- a/src/main/resources/templates/squad-store.hbs
+++ b/src/main/resources/templates/squad-store.hbs
@@ -6,7 +6,8 @@
         {{#each squadInstance}}
             Name: {{squadName}}<br>
             Cause: {{squadCause}}<br>
-
+            <h5>Created At:</h5>
+            <p> {{squad.createdAt}}</p>
             Team Leader: {{members}}
 
 
