added database through DAOs

--- a/src/main/resources/templates/Homepage.hbs
+++ b/src/main/resources/templates/Homepage.hbs
@@ -8,13 +8,13 @@
 
 
             <br>
-            <h2 id="boxshadow"><strong>Create Your Dream Squad to Help <br>
+            <h2 id="boxshadow"><strong>Create Your Dream models.Squad to Help <br>
                 Combat Our Motherland's Injustices<br>
                 One At A Time</strong></h2>
             <br>
             <br>
             <h3 id="boxshadow"><strong>Review The Profiles Of Modern-Day Comic Heroes <br>Under Heroes' Profile Tab,
-                and <br>Build Your Dream Squad!</strong> </h3>
+                and <br>Build Your Dream models.Squad!</strong> </h3>
             <br>
             <br>
         </div>
