--- a/src/main/resources/templates/Successheroes.hbs
+++ b/src/main/resources/templates/Successheroes.hbs
@@ -2,7 +2,7 @@
     <div class="success">
         <h1>Congratulations!</h1>
 
-       You just created the Hero {{ newHero.heroName }}.
+       You just created the models.Hero {{ newHero.heroName }}.
 
         click on the heroes tab to view the hero you created.to view the newly created hero.
 
