--- a/src/main/resources/templates/hero-form.hbs
+++ b/src/main/resources/templates/hero-form.hbs
@@ -4,28 +4,28 @@
 
 
     <div class="container">
-        <h2 class="text-center"><strong>Create Hero</strong></h2>
+        <h2 class="text-center"><strong>Create models.Hero</strong></h2>
 
         <form action="/heroes/new" method="post">
             <div class="form-group">
-                <label class="active " for="heroName">Hero Name</label>
+                <label class="active " for="heroName">models.Hero Name</label>
                 <input id="heroName" name="heroName" type="text" class="form-control">
             </div>
 
             <div class="form-group">
-                <label class="active" for="heroAge">Hero Age</label>
+                <label class="active" for="heroAge">models.Hero Age</label>
                 <input id="maxSize" name="heroAge" type="text" class="form-control">
             </div>
 
             <div class="form-group">
-                <label class="active" for="heroStrength">Hero Strength</label>
+                <label class="active" for="heroStrength">models.Hero Strength</label>
                 <input id="heroStrength" name="heroStrength" type="text" class="form-control">
             </div>
             <div class="form-group">
-                <label class="active" for="heroWeakness">Hero Weakness</label>
+                <label class="active" for="heroWeakness">models.Hero Weakness</label>
                 <input id="heroWeakness" name="heroWeakness" type="text" class="form-control">
             </div>
-            <button type="submit" class=" btn btn-success" >Create Hero!</button>
+            <button type="submit" class=" btn btn-success" >Create models.Hero!</button>
         </form>
     </div>
     <!--
