--- a/src/main/resources/templates/hero-store.hbs
+++ b/src/main/resources/templates/hero-store.hbs
@@ -11,8 +11,8 @@
 
 
             <br>
-            <a href="/heroes/{{id}}/update" width="5px" height="5px">Update Hero</a><br>
-            <a href="/heroes/{{id}}/delete" width="5px" height="5px">Delete Hero</a>
+            <a href="/heroes/{{id}}/update" width="5px" height="5px">Update models.Hero</a><br>
+            <a href="/heroes/{{id}}/delete" width="5px" height="5px">Delete models.Hero</a>
 
             <br>
             <br>
