--- a/src/main/resources/templates/squad-store.hbs
+++ b/src/main/resources/templates/squad-store.hbs
@@ -10,13 +10,9 @@
             <p> {{squad.createdAt}}</p>
             Team Leader: {{members}}
 
-
-            {{hero2}}
-            {{hero3}}
-            {{hero4}}
             <br>
-            <a href="/heroes/{{id}}" width="5px" height="5px">Update Squad</a><br>
-            <a href="/squad-store/{{id}}" width="5px" height="5px">Delete Squad</a>
+            <a href="/heroes/{{id}}" width="5px" height="5px">Update models.Squad</a><br>
+            <a href="/squad-store/{{id}}" width="5px" height="5px">Delete models.Squad</a>
 
             <br>
             <br>
