--- a/src/main/resources/templates/Success.hbs
+++ b/src/main/resources/templates/Success.hbs
@@ -2,7 +2,7 @@
 <div class="success">
     <h1>Success!</h1>
 
-    Your {{ newSquad.squadName }} Squad  has been created and saved.
+    Your {{ newSquad.squadName }} models.Squad  has been created and saved.
 
     Your mission is to {{newSquad.squadCause}} as a team.
 
