--- a/src/main/resources/templates/delete.hbs
+++ b/src/main/resources/templates/delete.hbs
@@ -2,7 +2,7 @@
     <div class="delete">
         <h1>Deleted!</h1>
 
-         Your Squad  has Deleted
+         Your models.Squad  has Deleted
 
 
 
