--- a/src/main/resources/templates/squad-details.hbs
+++ b/src/main/resources/templates/squad-details.hbs
@@ -1,11 +1,19 @@
 {{#partial "content"}}
 
     <p>Content:</p>
-
     <p>{{ Squad.squadName}}</p>
+    {{#if squadHeroes}}
+        {{#each squadHeroes}}
+            {{heroName}}
+
+        {{/each}}
+    {{/if}}
+
+    <a href="/posts/{{squad.id}}/update">Edit this models.Squad</a><br>
+    <a href="/squads/{{squad.id}}/delete"> &nbsp; &nbsp; DELETE this squad (no undo)</a>
     <h5>Name:</h5>
     <p> {{ Squad.squadCause }}</p>
-    <h5>Squad status:</h5>
+    <h5>models.Squad status:</h5>
     <p>
         {{#if squad.posted }}
             <span class="glyphicon glyphicon-star" aria-hidden="true"></span>  Published
@@ -13,11 +21,11 @@
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Draft
         {{/if}}
 
-        <a href="/posts/{{squad.id}}/update">Edit this Squad</a><br>
+        <a href="/posts/{{squad.id}}/update">Edit this models.Squad</a><br>
         <a href="/squads/{{squad.id}}/delete"> &nbsp; &nbsp; DELETE this squad (no undo)</a>
     </p>
 
-    <a href="/posts/{{squad.id}}/update">Edit this Squad</a>
+    <a href="/posts/{{squad.id}}/update">Edit this models.Squad</a>
     <a href="/posts/{{squad.id}}/delete">&nbsp; &nbsp;DELETE this post (no undo)</a>
 {{/partial}}
 
